--- a/configuration.yaml
+++ b/configuration.yaml
@@ -14,4 +14,6 @@ automation: !include automations.yaml
 script: !include scripts.yaml
 script manual: !include_dir_named scripts/
 
-scene: !include scenes.yaml
+homeassistant:
+  # Load packages
+  packages: !include_dir_named integrations
